<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BaiduLBSScript_1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="logo_background">Logo Background</string>
    <string name="app_hello">BaiduLBS_Script_Version_1\n @UESTC百度俱乐部</string>
    <string name="login">登录</string>
    <string name="findIDBack">找回密码</string>
    <string name="registerID">注册帐号</string>
    <string name="ID">帐号</string>
    <string name="password">密码</string>
    <string name="test_regist">模拟注册界面，成功注册！\n 帐号：user 密码：pass</string>
    <string name="test_button_yes">确定</string>
    <string name="test_baidu_map">模拟百度地图API</string>
    <string name="test_baidu_map_tip">请输入已有聊天室代号（1~10）</string>
	<string name="chatRoomTips">模拟百度地图API——\n 1.输入聊天室代号，点击确认加入之\n 2.点击创建聊天室创建新的 </string>
	<string name="creat_chat_room">创建</string>
	<string name="dialog_send">发送</string>
	<string name="eMail">邮箱</string>
	<string name="userIcon">userIcon</string>
	<string name="register">提交注册</string>
	<string name="roomID">聊天室ID</string>
	<string name="roomName">聊天室名称</string>
</resources>