<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/ID"
       	android:hint="@string/ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="139dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passWord"
        android:hint="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Login"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passWord"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/findIDBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ID"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="17dp"
        android:text="@string/findIDBack"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/registID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/findIDBack"
        android:layout_alignBottom="@+id/findIDBack"
        android:layout_alignRight="@+id/ID"
        android:layout_marginRight="19dp"
        android:text="@string/registerID"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
