<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.baidu.mapapi.map.MapView
            android:id="@+id/bmapsView"
            android:layout_width="fill_parent"
            android:layout_height="330dp"
            android:clickable="true" >
        </com.baidu.mapapi.map.MapView>

        <Button
            android:id="@+id/requestLocationButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dip"
            android:background="@drawable/custom_loc" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chatRoomTips" />

    <EditText
        android:id="@+id/test_baidu_map_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/test_baidu_map_tip" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/test_baidu_map_yeah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_button_yes" />

        <Button
            android:id="@+id/test_baidu_map_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creat_chat_room" />
    </LinearLayout>

</LinearLayout>